Stubbed out theme toggle.
Change-Id: Id9155c52c7ce6b9f3669044e18880b0278212679

--- a/app/styles/_content.scss
+++ b/app/styles/_content.scss
@@ -1,4 +1,15 @@
 /* Site Content Styles */
+.theme-toggle {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  select#theme-selector {
+    opacity: 0.5;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
 
 .browserupgrade {
   margin: 0.2em 0;
