--- a/app/styles/_themeBuilder.scss
+++ b/app/styles/_themeBuilder.scss
@@ -1,10 +1,10 @@
 /* Theme Builder mixin */
 
-@mixin theme-builder(   $theme-primary: darken(#428bca, 6.5%); // #337ab7
-                        $theme-success: #5cb85c;
-                        $theme-info: #5bc0de;
-                        $theme-warning: #f0ad4e;
-                        $theme-danger: #d9534f;
+@mixin theme-builder(   $theme-primary: darken(#428bca, 6.5%), // #337ab7
+                        $theme-success: #5cb85c,
+                        $theme-info: #5bc0de,
+                        $theme-warning: #f0ad4e,
+                        $theme-danger: #d9534f
                     ) {
 
     .btn-primary {
