Updated readme with installation instructions; code updates after presentation.
Change-Id: I1204240ddd0ca4e4575c08d5268de8fa2adb8043

--- a/app/styles/_themeBuilder.scss
+++ b/app/styles/_themeBuilder.scss
@@ -13,6 +13,8 @@
         background-color: #666;
     }
 
+
+
     .btn-primary {
         @if lightness($theme-primary) <= 50 {
             color: #fff; // TODO: Make this based on darkness
@@ -21,6 +23,9 @@
         }
         background-color: $theme-primary;
         border-color: $theme-primary;
+    }
+    .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+        @extend .btn-primary;
     }
     .btn-success {
         @if lightness($theme-success) <= 50 {
